style: remove variables, fix scrollbar color

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -6,7 +6,7 @@
 * {
   box-sizing: border-box;
   scrollbar-width: thin;
-  scrollbar-color: var(--color-theme-darkest) var(--color-theme-main);
+  scrollbar-color: var(--color-grey-dark) var(--color-bg-1);
 
   &::-webkit-scrollbar {
     width: 4px;
