--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -19,8 +19,5 @@
   --color-green-dark: #9dcd28;
   --color-green-darker: #82af0f;
   --color-orange-main: #e55800;
-  --color-theme-light: #7b47e1;
-  --color-theme-main: #6838f9;
-  --color-theme-darkest: #05071b;
   --color-bg-1: #f7f8f2;
 }
